<resources>
    <string name="app_name">Trip Assistant</string>
    <string name="action_settings">Settings</string>

    <string name="main_heading">Trip Assistant</string>
    <string name="currency_heading">Currency Converter</string>
    <string name="time_heading">Time Check</string>
    <string name="country_information_heading">Country Information</string>

    <string name="time_text">Time</string>

    <string name="GlobeImage">globe</string>
    <string name="map">map</string>
    <string name="map_image">mapimage</string>

    <string name="title_activity_country_information">Country Information</string>
    <string name="spinnerPrompt">Choose From Spinner</string>

    <string name="time_button_text">Time Check</string>
    <string name="currency_button_title">Currency Converter</string>
    <string name="country_information_button">Country Information</string>
    <string name="current_irish_heading">Current Time in Ireland</string>

    <string name="zone_option">Zone</string>
    <string name="country_option">Country</string>
    <string name="get_time_button">Get Time</string>
    <string name="ChooseSettings">Choose The Country You Want</string>
    <string name="InLocation">In</string>

    <string name="germanButton">germanButton</string>
    <string name="ukImageButton">ukImageButton</string>
    <string name="usaImageButton">usaImageButton</string>
    <string name="germanImageButton">germanImageButton</string>
    <string name="To">To</string>
    <string name="ConvertButton">Convert</string>
    <string name="EnterAmountTo">Enter Amount in Euro</string>

    <string name="ConvertToText">CONVERT</string>
    <string name="EuroText">EURO</string>
    <string name="ToText">TO</string>
    <string name="showAll">Show All Rates</string>
    <string name="all_rates">All Rates</string>

    <string-array name="currency_array">
        <item>USD USA Dollar</item>
        <item>GBP Great British Pound</item>
        <item>AUD Australian Dollar</item>
        <item>JPY Japanese Yen</item>
        <item>BGN Bulgarian Lev</item>
        <item>CZK Czech Republic Koruna</item>
        <item>DKK Danish Krone</item>
        <item>HUF Hungarian Forint</item>
        <item>PLN Polish Zloty</item>
        <item>RON Romanian Leu</item>
        <item>SEK Swedish Krona</item>
        <item>CHF Swiss Franc</item>
        <item>NOK Norwegian Krone</item>
        <item>HRK Croatian Kuna</item>
        <item>RUB Russian Ruble</item>
        <item>TRY Turkish Lira</item>
        <item>BRL Brazilian Real</item>
        <item>CAD Canadian Dollar</item>
        <item>CNY Chinese Yuan</item>
        <item>HKD Hong Kong Dollar</item>
        <item>IDR Indonesian Rupiah</item>
        <item>ILS Israeli New Sheqel</item>
        <item>INR Indian Rupee</item>
        <item>KRW South Korean Won</item>
        <item>MXN Mexican Peso</item>
        <item>MYR Malaysian Ringgit</item>
        <item>NZD New Zealand Dollar</item>
        <item>PHP Philippine Peso</item>
        <item>SGD Singapore Dollar</item>
        <item>THB Thai Baht</item>
        <item>ZAR South African Rand</item>
    </string-array>

    <string-array name="time_country_array">
        <item>France</item>
        <item>China</item>
        <item>Spain</item>
        <item>Italy</item>
        <item>Turkey</item>
        <item>UK</item>
        <item>Germany</item>
        <item>Malaysia</item>
        <item>Mexico</item>
        <item>Australia</item>
        <item>Russia</item>
        <item>Ukraine</item>
        <item>Thailand</item>
        <item>Saudi Arabia</item>
        <item>Greece</item>
        <item>Poland</item>
        <item>Netherlands</item>
        <item>Singapore</item>
    </string-array>

    <string name="title_activity_maps">Map</string>
    <string name="flagText">Flag</string>
    <string name="flagImage">FlagImage</string>
    <string name="CapText">CAPITAL TEXT</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_second">Second</string>
    <string name="imageButtonPhrase1">imageButtonPhrase1</string>
    <string name="imageButtonPhrase2">imageButtonPhrase2</string>
    <string name="imageButtonPhrase3">imageButtonPhrase3</string>
    <string name="imageButtonPhrase4">imageButtonPhrase4</string>
    <string name="imageButtonPhrase5">imageButtonPhrase5</string>

</resources>
