<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:gravity="center_horizontal"
    tools:context=".CountryInformationActivity"
    tools:showIn="@layout/activity_country_information"
    android:background="#FFF5EE">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/main_heading"
        android:id="@+id/textView6"
        android:textSize="28sp"
        android:fontFamily="Serif"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/country_information_heading"
        android:id="@+id/country_information_heading"
        android:paddingBottom="20dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:layout_alignParentStart="true" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/map"
        tools:context="com.example.gavingaughranext.tripassistant.MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        tools:layout="@layout/abc_action_menu_item_layout"
        android:layout_below="@+id/country_information_heading"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/flagImage"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:id="@+id/flagImage"
        android:contentDescription="@string/flagImage"
        android:layout_alignTop="@+id/map"
        android:layout_alignParentStart="true"
        android:layout_marginTop="72dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/capitalText"
        android:text="@string/CapText"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/map" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/learnTextHeading"
        android:textAlignment="center"
        android:layout_below="@+id/language1Text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="22dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/language1Text"
        android:layout_below="@+id/capitalText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/phrase1Text"
        android:layout_below="@+id/learnTextHeading"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/imageButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/phrase2Text"
        android:layout_below="@+id/phrase1Text"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/imageButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/phrase3Text"
        android:layout_above="@+id/imageButton4"
        android:layout_alignEnd="@+id/phrase2Text"
        android:layout_toEndOf="@+id/imageButton2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/phrase4Text"
        android:layout_below="@+id/phrase3Text"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/imageButton4" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/phrase5Text"
        android:layout_below="@+id/phrase4Text"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/imageButton5" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="22dp"
        android:id="@+id/imageButton"
        android:contentDescription="@string/imageButtonPhrase1"
        android:src="@drawable/audio"
        android:layout_below="@+id/learnTextHeading"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="22dp"
        android:id="@+id/imageButton2"
        android:src="@drawable/audio"
        android:contentDescription="@string/imageButtonPhrase2"
        android:layout_below="@+id/phrase1Text"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="22dp"
        android:id="@+id/imageButton3"
        android:contentDescription="@string/imageButtonPhrase3"
        android:src="@drawable/audio"
        android:layout_below="@+id/phrase2Text"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="22dp"
        android:id="@+id/imageButton4"
        android:contentDescription="@string/imageButtonPhrase4"
        android:src="@drawable/audio"
        android:layout_below="@+id/imageButton3"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="22dp"
        android:id="@+id/imageButton5"
        android:contentDescription="@string/imageButtonPhrase5"
        android:src="@drawable/audio"
        android:layout_below="@+id/imageButton4"
        android:layout_alignParentStart="true" />

</RelativeLayout>
